@@ -141,16 +141,16 @@ setup(
     ]},
     entry_points={
         'console_scripts': [
+            'qshell = libqtile.scripts.qshell:main',
             'qtile = libqtile.scripts.qtile:main',
+            'qtile-cmd = libqtile.scripts.qtile_cmd:main',
             'qtile-run = libqtile.scripts.qtile_run:main',
             'qtile-top = libqtile.scripts.qtile_top:main',
-            'qshell = libqtile.scripts.qshell:main',
-            'qcmd = libqtile.scripts.qcmd:main',
         ]
     },
     scripts=[
+        'bin/dqtile-cmd',
         'bin/iqshell',
-        'bin/dqcmd',
     ],
     data_files=[
         ('share/man/man1', ['resources/qtile.1',
